Validate executor body-cost sensor